--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "path": "^0.12.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   }
 }
