--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "immutability-helper": "^3.1.1",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-hot-loader": "^4.13.0"
+    "react-hot-loader": "^4.13.0",
+    "react-router-dom": "^5.2.0"
   }
 }
