--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "caman": "^4.1.2",
     "immutability-helper": "^3.1.1",
     "path": "^0.12.7",
     "react": "^17.0.2",
