--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-jsx-control-statements": "^4.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "socket.io-client": "^4.1.2",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
@@ -30,7 +31,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
-    "react-router-dom": "^5.2.0",
-    "socket.io-client": "^4.1.2"
+    "react-router-dom": "^5.2.0"
   }
 }
