--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/runtime": "^7.14.8",
+    "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "caman": "^4.1.2",
